--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -53,4 +53,11 @@
     </div>
 
   </body>
+<script>
+    $(function(){
+        $.get('/search', function(data){
+            console.log(data);
+        })
+    });
+</script>
 </html>
